# proof-of-thought

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  FEEDBACK.md  README.md  eslint.config.js  opencode.json  package-lock.json  package.json  pyproject.toml  tsconfig.build.json  tsconfig.json
.cursor/rules/: hackathon.mdc  sponsor-tech.mdc
.devcontainer/: devcontainer.json  docker-compose.yml
dashboard/: README.md  package.json  tailwind.config.js
dashboard/src/app/: globals.css  layout.tsx  page.tsx
dashboard/src/components/: AgentNetwork.tsx  CommercePanel.tsx  ConsensusView.tsx  DeliberationFeed.tsx  PotReport.tsx
docs/: PROJECT.md  prizes.md  vendor-activity.md  vhspace-README.md  vhspace-architecture.html  vhspace-demo-script.md
scripts/: setup.py
src/commerce/: audit-trail.ts  index.ts  wallet.ts  x402-gateway.ts
tests/: audit-trail.test.ts  x402-gateway.test.ts
